fixes layout issues between firefox and chrome

--- a/hw3/public/css/styles.css
+++ b/hw3/public/css/styles.css
@@ -156,6 +156,11 @@ ul li {
     color: white;
 }
 
+.center {
+    margin: auto;
+    width: 100%;
+}
+
 /*
 *   Habits
 */
